Dodal gumb za konc treninga, ki še ne doda treninga v bazo. Dodal nekaj metod v razredu Training

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="sign_in">Sign In</string>
     <string name="Create_exercise">Create exercise</string>
     <string name="exercise_type_sp">Choose exercise</string>
+    <string name="finish_training">Finish</string>
 
     <string-array name="exercise_type">
         <item>Choose exercise:</item>
