--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,9 @@
     <string name="sign_in_text">Sign in</string>
     <string name="training_name">Training name:</string>
     <string name="hint_training_title">Title your training</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="exercise_name">Exercise name</string>
 
 </resources>
 
