--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,5 +29,10 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="exercise_name">Exercise name</string>
 
+    <string-array name="gender">
+        <item>Male</item>
+        <item>Female</item>
+    </string-array>
+
 </resources>
 
