--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,10 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="exercise_name">Exercise name</string>
+    <string name="log_out">Log out</string>
+    <string name="trainings">Trainings</string>
+    <string name="following">Following</string>
+    <string name="followers">Followers</string>
 
     <string-array name="gender">
         <item>Male</item>
