preurejanje shranjevanja treningov v firestore

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,17 +16,15 @@
     <string name="exercise_tw">Exercise</string>
     <string name="exercise_name_tw">Name: </string>
     <string name="exercise_length_tw">Length: </string>
-    <string name="exercise_description_tw">Descripition: </string>
+    <string name="exercise_description_tw">Description: </string>
     <string name="exercise_position_tw">Position: </string>
-    <string name="exercise_repeats_tw">Repeats: </string>
+    <string name="exercise_repeats_tw">Sets: </string>
     <string name="exercise_timer_cb">Timer</string>
     <string name="app_title">Swish</string>
     <string name="register_text">New User? Register Now</string>
     <string name="sign_in_text">Sign in</string>
     <string name="training_name">Training name:</string>
     <string name="hint_training_title">Title your training</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="exercise_name">Exercise name</string>
     <string name="log_out">Log out</string>
     <string name="trainings">Trainings</string>
