--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,7 @@
     <string name="exercise_name">Exercise name</string>
     <string name="log_out">Log out</string>
     <string name="trainings">Trainings</string>
+    <string name="completed_trainings">Completed trainings</string>
     <string name="following">Following</string>
     <string name="followers">Followers</string>
 
